Bug 200190 - tag filters: unlike older versions AND-condition doesn't match anymore
Summary: tag filters: unlike older versions AND-condition doesn't match anymore
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Albums-Filters (other bugs)
Version First Reported In: 1.0.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-14 17:49 UTC by wto.wit01
Modified: 2012-06-27 11:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wto.wit01 2009-07-14 17:49:20 UTC
Version:           Version 1.0.0-beta3 (rev.: 996612) (using KDE 4.2.2)
Compiler:          gcc (Debian 4.3.3.13) 4.3.3 
OS:                Linux
Installed from:    Compiled From Sources

right side bar: Tag Filters
there is no difference which "Matching Condition" is selected: both OR and AND (between tags) show the same matching results (as selected OR condition)
at least version 0.10.x did match better......
Comment 1 Marcel Wiesweg 2009-07-16 19:20:03 UTC
SVN commit 997947 by mwiesweg:

Fix subtle typo

BUG: 200190

 M  +3 -3      NEWS  
 M  +2 -2      libs/models/imagefiltersettings.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=997947