Fix subtle typo

BUG: 200190

svn path=/trunk/extragear/graphics/digikam/; revision=997947